# Inspection-Path-Planning

./: .gitignore  .gitignore~  README.md  install.py  setup.sh
3d_models/: mockup_only.stl  viewpoints.yml
executable/optimize_coverage/: libOpenThreads.so.14  libexpat.so.1  libnvidia-tls.so.340.96  libosg.so.99  libosgDB.so.99  libosgGA.so.99  libosgText.so.99  libosgUtil.so.99  libosgViewer.so.99  optimize_coverage
plan_evaluator/Evaluator/src/: CMakeLists.txt  ContourTracing.cpp  ContourTracing.h  PlanCoverageEstimator.cpp  PlanCoverageEstimator.cpp~  PlanCoverageEstimator.h  PlanEnergyEvaluator.cpp  PlanEnergyEvaluator.h  PlanInterpreterBoxOrder.cpp  PlanInterpreterBoxOrder.h  moeaCoverageRunner.cpp
plan_evaluator/Utility_Functions/src/: CameraEstimator.cpp  CameraEstimator.cpp~  CameraEstimator.h  Constants.h  GeodeFinder.cpp  GeodeFinder.h  HelperMethods.cpp  HelperMethods.h  ImageViewerCaptureTool.cpp  ImageViewerCaptureTool.hpp  KeyboardInputHandler.cpp  KeyboardInputHandler.h  OsgHelpers.cpp  OsgHelpers.cpp~  OsgHelpers.h  SceneKeeper.cpp  SceneKeeper.h  TriangleData.cpp  TriangleData.h
plan_optimizer/: README  README~  circling_plan_generator.py  model_viewpoint_selector.py  multiRun.py  optimize_coverage.py  plan_exporter.py  plotData.py  python_dependencies.txt  store_plan_images.py  visualizePlan.py  visualizePlan.py~
plan_optimizer/cpp_wrapper/: __init__.py  compilation.sh  cpp_binding.i  cpp_binding.py  cpp_binding_wrap.cxx  eval_func.i~  setup.py
plan_optimizer/evolutionary_operators/: EvaluationInterface.py  individuals.py  mutationAndRecombination.py  planEvaluatorSetup.py
plan_optimizer/settings/: Constants_and_Datastructures.py  Parameters.py  Utilities.py  runtime_specified_parameters.py  viewpoints.pkl
plan_optimizer/statistics_gathering_scripts/: complete_coverage_iterator.py
